name:           webdriver-w3c
version:        0.0.3
description:    Please see the README on Github at <https://github.com/nbloomf/webdriver-w3c#readme>
homepage:       https://github.com/nbloomf/webdriver-w3c#readme
bug-reports:    https://github.com/nbloomf/webdriver-w3c/issues
author:         Nathan Bloomfield
maintainer:     nathan.bloomfield@a8c.com
copyright:      2018 Automattic, Inc.
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
cabal-version:  1.20
category:       web, webdriver, testing
synopsis:       Bindings to the WebDriver API

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/nbloomf/webdriver-w3c



library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options:
    -fwarn-incomplete-patterns

  build-depends:
      base >=4.12 && <5

    , aeson >=1.2.4.0
    , aeson-pretty >=0.8.5
    , base64-bytestring >=1.0.0.1
    , bytestring >=0.10.8.2
    , containers >=0.5.10.2
    , directory >=1.3.0.2
    , exceptions >=0.8.3
    , http-client >=0.5.10
    , http-types >=0.12.1
    , JuicyPixels >=3.2.9.4
    , lens >=4.16
    , lens-aeson >=1.0.2
    , network-uri >= 2.6
    , QuickCheck >=2.10.1
    , random >=1.1
    , scientific >=0.3.5.2
    , script-monad >=0.0.3
    , SHA >=1.6.4.2
    , stm >=2.4.5.0
    , tasty >=1.0.1.1
    , tasty-expected-failure >=0.11.1.1
    , text >=1.2.3.0
    , time >=1.8.0.2
    , transformers >=0.5.5.0
    , unordered-containers >=0.2.9.0
    , uri-encode >=1.5.0.5
    , vector >=0.12.0.1
    , wreq >=0.5.2

  exposed-modules:
    Test.Tasty.WebDriver
    Test.Tasty.WebDriver.Config
    Web.Api.WebDriver.Assert
    Web.Api.WebDriver
    Web.Api.WebDriver.Classes
    Web.Api.WebDriver.Endpoints
    Web.Api.WebDriver.Helpers
    Web.Api.WebDriver.Monad
    Web.Api.WebDriver.Types
    Web.Api.WebDriver.Types.Keyboard
    Web.Api.WebDriver.Uri



executable webdriver-w3c-intro
  default-language: Haskell2010
  main-is: Main.lhs
  hs-source-dirs: app
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      webdriver-w3c
    , base >=4.7 && <5

    , tasty >=1.0.1.1
    , transformers >=0.5.5.0
    , text >=1.2.3.0



executable wd-tasty-demo
  default-language: Haskell2010
  main-is: TastyDemo.lhs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      webdriver-w3c
    , base >=4.7 && <5

    , text >=1.2.3.0
    , tasty >=1.0.1.1
    , tasty-expected-failure >=0.11.1.1



executable wd-parallel-stress-test
  default-language: Haskell2010
  main-is: ParallelStressTest.hs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      webdriver-w3c
    , base >=4.7 && <5

    , text >=1.2.3.0
    , tasty >=1.0.1.1



executable wd-repl-demo
  default-language: Haskell2010
  main-is: ReplDemo.hs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      webdriver-w3c
    , base >=4.7 && <5

    , text >=1.2.3.0
    , tasty >=1.0.1.1



test-suite webdriver-w3c-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      webdriver-w3c
    , base >=4.7 && <5

    , aeson >=1.2.4.0
    , base64-bytestring >=1.0.0.1
    , bytestring >=0.10.8.2
    , containers >=0.5.10.2
    , directory >=1.3.0.2
    , exceptions >=0.8.3
    , http-client >=0.5.10
    , http-types >=0.12.1
    , JuicyPixels >=3.2.9.4
    , lens >=4.16
    , lens-aeson >=1.0.2
    , parsec >=3.1.13.0
    , QuickCheck >=2.10.1
    , random >=1.1
    , unordered-containers >=0.2.9.0
    , scientific >=0.3.5.2
    , script-monad >=0.0.1
    , tasty >=1.0.1.1
    , tasty-expected-failure >=0.11.1.1
    , tasty-hunit >=0.10.0.1
    , tasty-quickcheck >=0.9.2
    , time >=1.8.0.2
    , text >=1.2.3.0
    , transformers >=0.5.5.0
    , vector >=0.12.0.1
    , wreq >=0.5.2

  other-modules:
    Test.Tasty.WebDriver.Config.Test
    Web.Api.WebDriver.Assert.Test
    Web.Api.WebDriver.Monad.Test
    Web.Api.WebDriver.Monad.Test.Server
    Web.Api.WebDriver.Monad.Test.Server.Page
    Web.Api.WebDriver.Monad.Test.Server.State
    Web.Api.WebDriver.Monad.Test.Session.Success
    Web.Api.WebDriver.Monad.Test.Session.InvalidElementState
    Web.Api.WebDriver.Monad.Test.Session.UnknownError
    Web.Api.WebDriver.Types.Test
